--- a/README
+++ b/README
@@ -1,2 +1,9 @@
-Repositório Git para trabalho de Lab de Engenharia
+# Sistema Cemiterio
+1. Esse não era meu projeto principal, mas deu ruim no primeiro então vai esse mesmo. Pra quem quiser ver vou deixar o link
+do que deveria ter sido upado, mas não deu.
+2. Esse projeto foi meio que feito de última hora correndo.
+3. Eu só preciso de 5.8, me ajudem porque semana que vem vou na pré-estreia do Star Wars.
+4. Essa é uma das minhas últimas matérias, me ajudem, pfvr :(
+
+Link do projeto de verdade: https://github.com/gabrielamanzolini/BRANAW
 
