--- a/README
+++ b/README
@@ -5,5 +5,5 @@ do que deveria ter sido upado, mas não deu.
 3. Eu só preciso de 5.8, me ajudem porque semana que vem vou na pré-estreia do Star Wars.
 4. Essa é uma das minhas últimas matérias, me ajudem, pfvr :(
 
-Link do projeto de verdade: https://github.com/gabrielamanzolini/BRANAW
+Link do projeto (de votação) de verdade: https://github.com/gabrielamanzolini/BRANAW
 
